Quorum3/Library/Tests/TypeCheckerGenerated/Fail/ImpAssignIntegerUndefinedField.quorum
class Main
    integer v = undefined
    action Main
        Test(v)
    end

    action Test(integer var)
    end
end
